bug fixing
fixed a bug where resume action button are out of place

--- a/stylesheets/homePage.css
+++ b/stylesheets/homePage.css
@@ -25,5 +25,5 @@ body {
 }
 
 .preview {
-  padding-top: 10%;
+  margin-top: 10%;
 }
